--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <header>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./main.css">
     <meta charset="utf-8">
 </header>
 <body>
@@ -20,5 +20,5 @@
             
         </div>
     </div>    
-    <script src="main.js" defer></script>
+    <script src="./main.js" defer></script>
 </body>
